# AQBot

./: .gitignore  CONTRIBUTING.md  README-AR.md  README-DE.md  README-EN.md  README-ES.md  README-FR.md  README-HI.md  README-JA.md  README-KO.md  README-RU.md  README-ZH-TW.md  README.md  cliff.toml  package.json  pnpm-lock.yaml  vite.config.ts
.github/: release-drafter.yml
.github/workflows/: deploy-website.yml  release.yml  test-linux-build.yml  test-windows-build.yml
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/agent/: Cargo.toml
src-tauri/crates/agent/src/: bridge.rs  lib.rs  permission.rs  security.rs
src-tauri/crates/core/: Cargo.toml
src-tauri/crates/core/src/: mcp_client.rs  path_vars.rs  rag.rs  repo.rs  storage_migration.rs  types.rs  vector_store.rs
src-tauri/crates/core/src/entity/: agent_sessions.rs  builtin_model_deletions.rs  conversation_categories.rs  messages.rs  mod.rs  providers.rs
src-tauri/crates/core/src/repo/: agent_session.rs  conversation.rs  conversation_category.rs  message.rs  provider.rs  provider_import.rs  tool_execution.rs
src-tauri/crates/gateway/src/: handlers.rs  native.rs
src-tauri/crates/migration/src/: lib.rs  m20250108_000001_add_provider_icon.rs  m20260518_000001_add_builtin_model_deletions.rs
src-tauri/crates/providers/: Cargo.toml
src-tauri/crates/providers/src/: anthropic.rs  gemini.rs  lib.rs  openai.rs  openai_responses.rs
src-tauri/src/: context_manager.rs  diagnostics.rs  indexing.rs  lib.rs  startup_diagnostics.rs  tray.rs
src-tauri/src/commands/: agent.rs  conversations.rs  desktop.rs  messages.rs  mod.rs  providers.rs
src/components/chat/: CategoryEditModal.tsx  ChatSidebar.tsx  ChatView.tsx  InputArea.tsx  KnowledgeRetrievalNode.tsx  MemoryRetrievalNode.tsx  MultiModelDisplay.tsx  PermissionCard.tsx  ToolCallCard.tsx  chatScroll.ts
src/components/drawing/: DrawingSettingsPanel.tsx
src/components/files/: FilesContent.tsx
src/components/gateway/: GatewayKeys.tsx  GatewayOverview.tsx
src/components/layout/: GlobalCopyMenu.tsx  TitleBar.tsx
src/components/settings/: AboutPage.tsx  ConversationSettings.tsx  DisplaySettings.tsx  IconPickerModal.tsx  KnowledgeSettings.tsx  ProviderDetail.tsx  ProviderList.tsx
src/i18n/locales/: ar.json  de.json  en-US.json  es.json  fr.json  hi.json  ja.json  ko.json  ru.json  zh-CN.json  zh-TW.json
src/lib/: browserMock.ts  desktopCapabilities.ts  memoryUtils.ts  providerIcons.tsx
src/stores/: agentStore.ts  categoryStore.ts  conversationStore.ts  index.ts  providerStore.ts  settingsStore.ts
src/theme/: shadcnTheme.ts
src/types/: agent.ts  backup.ts  index.ts
website/: package.json  pnpm-lock.yaml
website/docs/: download.md  features.md  index.md
(+46 files in other folders)
